[build-system]
build-backend = "setuptools.build_meta"
requires = ["cffi", "jbb", "setuptools", "wheel"]

[project]
name = "pymcurl"
version = "8.9.1.0"
description = "Manage outbound HTTP connections using Curl & CurlMulti"
authors = [
  {name = "Ganesh Viswanathan", email = "dev@genotrance.com"}
]
readme = "README.md"
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Win32 (MS Windows)",
        "Environment :: MacOS X",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.4",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Internet :: WWW/HTTP"
]
dependencies = ["cffi"]

[project.urls]
Homepage = "https://github.com/genotrance/mcurl"
Repository = "https://github.com/genotrance/mcurl"
Issues = "https://github.com/genotrance/mcurl/issues"

[tool.setuptools]
packages = ["mcurl"]
include-package-data = true

[tool.tox]
envlist = ["py37", "py38", "py39", "py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
commands = [["python", "tests/test.py", "{env:HTTPBIN}"]]
